--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,34 @@
-node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .env
-coverage
-coverage.json
-typechain
-typechain-types
+.encryptedKey.json
 
-#Hardhat files
-cache
-artifacts
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
