--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "magic-sdk": "^13.1.0",
     "moralis-v1": "^1.12.0",
     "next": "12.1.5",
     "react": "18.0.0",
